# magicfix

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  SECURITY.md  audio.c  audio.h  font.c  font.h  image.c  image.h  interface.c  interface.h  magicfix.c  magicfix.h  main.c  result.h  sig.json  video.c  video.h
